fix(create-comment): added missing margin bottom on button container

--- a/app/src/app/pages/main/create-comment/create-comment.page.scss
+++ b/app/src/app/pages/main/create-comment/create-comment.page.scss
@@ -43,6 +43,7 @@
   &--buttons {
     display: flex;
     margin-top: 2.4rem;
+    margin-bottom: 2.4rem;
 
     button:first-child {
       margin-right: 1.2rem;
